--- a/HW4.qmd
+++ b/HW4.qmd
@@ -354,3 +354,76 @@ Based on my analysis of the stratified cluster data, I found that approximately 
 The standard error of this estimate is about 0.25, which means one can expect the proportion estimate to vary by around 25 percentage points if one were to repeat the sampling process. This relatively large standard error reflects the variability inherent in the cluster sampling approach used before. The variance components across the five strata contributed to a total variance of 11.73, which is then appropriately scaled by the sample size to give me the standard error. 
 
 So if greater precision is needed, one might want to consider increasing the number of PSUs within each stratum or exploring alternative sampling designs that could reduce this variability.
+
+
+## b) Give a 95% confidence interval for the proportion, making sure to use the correct degrees of freedom according to this design.
+
+For a stratified two-stage cluster sampling design with two PSUs per stratum, the degrees of freedom are calculated as:
+
+$$df = L - 1$$
+
+where $L$ is the number of strata.
+$$df = L - 1 = 5 - 1 = 4$$
+
+The 95% confidence interval is then:
+
+$$\hat{p} \pm t_{df, 0.975} \times SE(\hat{p})$$
+
+t-critical value: $$t_{4, 0.975} = 2.776$$
+
+So the confidence interval: $$\hat{p} \pm t_{4, 0.975} \times SE(\hat{p}) = 0.5217 \pm 2.776 \times 0.0186 = 0.5217 \pm 0.0517$$
+
+Now the lower and upper bounds: $$CI_{lower} = 0.5217 - 0.0517 = 0.4701$$ $$CI_{upper} = 0.5217 + 0.0517 = 0.5734$$
+
+Therefore: $$CI_{95%} = (0.4701, 0.5734)$$
+
+```{r}
+data <- data.frame(
+  stratum = rep(1:5, each = 2),
+  psu = rep(1:2, times = 5),
+  t_y = c(16, 15, 9, 5, 8, 10, 6, 10, 10, 7),
+  t_x = c(23, 25, 17, 15, 20, 21, 16, 19, 12, 16)
+)
+
+# Calculating proportion
+total_y <- sum(data$t_y)
+total_x <- sum(data$t_x)
+p_hat <- total_y / total_x
+
+# Calculating residuals (z-values)
+data$z <- data$t_y - p_hat * data$t_x
+
+# Calculating variance components by stratum
+var_components <- tapply(data$z, data$stratum, function(z) {
+  (z[1] - z[2])^2 / 4
+})
+
+# Sum variance components
+var_p_hat <- sum(var_components)
+
+# Calculating standard error
+se_p_hat <- sqrt(var_p_hat) / total_x
+
+# Calculating degrees of freedom
+L <- length(unique(data$stratum))  # Number of strata
+df <- L - 1
+
+# Calculating t-critical value
+t_crit <- qt(0.975, df)
+
+# Calculating 95% CI
+ci_lower <- p_hat - t_crit * se_p_hat
+ci_upper <- p_hat + t_crit * se_p_hat
+
+cat("Estimated proportion (p_hat):", p_hat, "\n")
+cat("Standard error of p_hat:", se_p_hat, "\n")
+cat("Degrees of freedom:", df, "\n")
+cat("t-critical value:", t_crit, "\n")
+cat("95% Confidence Interval:", c(ci_lower, ci_upper), "\n")
+```
+
+Based on my analysis of the cholesterol data from this stratified cluster sample, I can say with 95% confidence that the true proportion of individuals with total cholesterol greater than 200 is between 47.0% and 57.3%. My best estimate for this proportion is 52.2%. 
+
+Now the design I used accounts for the complex sampling structure with five strata and two PSUs per stratum, which gives me just 4 degrees of freedom for calculating confidence intervals. This relatively small number of degrees of freedom explains why I needed to use a t-critical value of 2.78 rather than the normal approximation of 1.96. 
+
+Now the resulting interval width of about 10.3 percentage points shows moderate precision. So if one wanted more precise estimates, one would need to increase the number of strata or PSUs in the sample design.
