--- a/HW4.qmd
+++ b/HW4.qmd
@@ -427,3 +427,79 @@ Based on my analysis of the cholesterol data from this stratified cluster sample
 Now the design I used accounts for the complex sampling structure with five strata and two PSUs per stratum, which gives me just 4 degrees of freedom for calculating confidence intervals. This relatively small number of degrees of freedom explains why I needed to use a t-critical value of 2.78 rather than the normal approximation of 1.96. 
 
 Now the resulting interval width of about 10.3 percentage points shows moderate precision. So if one wanted more precise estimates, one would need to increase the number of strata or PSUs in the sample design.
+
+
+## c) Compute the design effect and roh for the proportion in (a).
+
+For stratified cluster sampling, the design effect and intracluster correlation can be calculated as follows:
+
+Design effect:
+$$deff = \frac{V_{cluster}(\hat{p})}{V_{SRS}(\hat{p})}$$
+
+Where:
+- $V_{cluster}(\hat{p})$ is the variance under cluster sampling
+- $V_{SRS}(\hat{p}) = \frac{p(1-p)}{n}$ is the variance under simple random sampling
+
+Intracluster correlation:
+$$roh = \frac{deff - 1}{\bar{m} - 1}$$
+
+Where:
+- $\bar{m}$ is the average cluster size
+
+So the calculation will be:
+
+Total sample size: $$total_x = 23 + 25 + 17 + 15 + 20 + 21 + 16 + 19 + 12 + 16 = 184$$
+
+Average cluster size: $$\bar{m} = \frac{total_x}{n_{PSU}} = \frac{184}{10} = 18.4$$
+
+Variance under cluster sampling: $$V_{cluster}(\hat{p}) = \left(\frac{\sqrt{var_p_hat}}{total_x}\right)^2 = \left(\frac{\sqrt{11.73}}{184}\right)^2 = 0.00035$$
+
+Variance under SRS: $$V_{SRS}(\hat{p}) = \frac{p(1-p)}{total_x} = \frac{0.5217(1-0.5217)}{184} = \frac{0.5217 \times 0.4783}{184} = 0.00136$$
+
+Design effect: $$deff = \frac{V_{cluster}(\hat{p})}{V_{SRS}(\hat{p})} = \frac{0.00035}{0.00136} = 0.255$$
+
+Intracluster correlation: $$roh = \frac{deff - 1}{\bar{m} - 1} = \frac{0.255 - 1}{18.4 - 1} = \frac{-0.745}{17.4} = -0.043$$
+
+```{r}
+data <- data.frame(
+  stratum = rep(1:5, each = 2),
+  psu = rep(1:2, times = 5),
+  t_y = c(16, 15, 9, 5, 8, 10, 6, 10, 10, 7),
+  t_x = c(23, 25, 17, 15, 20, 21, 16, 19, 12, 16)
+)
+
+# Calculating cluster and PSU totals
+total_y <- sum(data$t_y)
+total_x <- sum(data$t_x)
+p_hat <- total_y / total_x
+
+# Calculating actual variance from previous steps
+var_p_hat <- sum(var_components)
+se_p_hat <- sqrt(var_p_hat) / total_x
+var_cluster <- se_p_hat^2
+
+# Calculating SRS variance
+var_srs <- p_hat * (1 - p_hat) / total_x
+
+# Calculating design effect
+deff <- var_cluster / var_srs
+
+# Calculating average cluster size
+m_bar <- total_x / nrow(data)
+
+# Calculating roh
+roh <- (deff - 1) / (m_bar - 1)
+
+cat("Total sample size:", total_x, "\n")
+cat("Average cluster size:", m_bar, "\n")
+cat("Variance under cluster sampling:", var_cluster, "\n")
+cat("Variance under SRS:", var_srs, "\n")
+cat("Design effect (deff):", deff, "\n")
+cat("Intracluster correlation (roh):", roh, "\n")
+```
+
+Looking at my analysis of the intracluster correlation and design effect, I found that my design effect calculation came out to about 0.255, which means the variance from the stratified cluster sampling design is actually smaller than what one would expect from simple random sampling. This is reflected in the negative intracluster correlation (roh) of approximately -0.043. A negative roh suggests that individuals within the same cluster tend to be more different from each other than individuals from different clusters when it comes to cholesterol levels. 
+
+This could be happening because the stratification was particularly effective at capturing between-group differences. In practical terms, this means the complex sampling design actually improved precision compared to a simple random sample of the same size meaning I am getting a "design benefit" rather than a design effect penalty. 
+
+This finding contradicts the common assumption that cluster sampling always reduces precision, and suggests that for this particular health measure, this sampling strategy was quite efficient.
