--- a/HW4.qmd
+++ b/HW4.qmd
@@ -244,7 +244,6 @@ Variance of cluster sizes: $$V(t_{x,i}) = \frac{1}{n-1} \sum_{i=1}^n (t_{x,i} - 
 
 Variance of denominator: $$V(x) = n \cdot V(t_{x,i})$$
 
-Coefficient of variation: $$CV(x) = \frac{\sqrt{V(x)}}{x}$$
 
 ```{r}
 t_x <- c(13, 11, 7, 11, 6, 11, 5, 11, 9, 10)
@@ -375,7 +374,7 @@ So the confidence interval: $$\hat{p} \pm t_{4, 0.975} \times SE(\hat{p}) = 0.52
 
 Now the lower and upper bounds: $$CI_{lower} = 0.5217 - 0.0517 = 0.4701$$ $$CI_{upper} = 0.5217 + 0.0517 = 0.5734$$
 
-Therefore: $$CI_{95%} = (0.4701, 0.5734)$$
+Therefore: $$CI_{95\%} = (0.4701, 0.5734)$$
 
 ```{r}
 data <- data.frame(
@@ -576,14 +575,15 @@ For stratum 5: $$v_5 = \frac{(t_{x,5,1} - t_{x,5,2})^2}{4} = \frac{(12-16)^2}{4}
 
 Hence, Total variance: $$V(x) = \sum_{h=1}^5 v_h = 1 + 1 + 0.25 + 2.25 + 4 = 8.5$$
 
-Now the Coefficient of variation is:
+Now to check the Coefficient of variation,
 
-$$CV(x) = \frac{\sqrt{V(x)}}{x}$$
-where
 $$V(x) = 8.5$$
+
 and
+
 $$x = 184$$
 so
+
 $$CV(x) = \frac{\sqrt{8.5}}{184} = \frac{2.92}{184} = 0.016$$
 
 Since CV(x) = 0.016 < 0.1, the Taylor series approximation is adequate.
